--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,34 @@
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
 async==0.6.2
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.1.3
+cryptography==38.0.1
+docopt==0.6.2
 Flask==2.0.1
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
 gunicorn==20.1.0
+idna==3.4
+itsdangerous==2.1.2
 Jinja2==3.0.1
 lxml==4.6.3
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.0.1
-numpy==1.21.1
+mysql-connector-python==8.0.30
+mysqlclient==2.1.1
+numpy==1.24.2
 package-name==0.1
 pandas==1.3.1
+pipreqs==0.4.11
+protobuf==3.20.1
+pycparser==2.21
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2022.2.1
 requests==2.26.0
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
 tmdbv3api==1.7.6
 urllib3==1.26.6
 Werkzeug==2.0.1
+yarg==0.1.9
